[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Character/Boomfish.gd" type="Script" id=1]
[ext_resource path="res://Assets/Other/Bubble_Particle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Entity/Boomfish.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Other/Visibilty_Box.tscn" type="PackedScene" id=4]
[ext_resource path="res://Other/Game_UI_Theme.tres" type="Theme" id=5]
[ext_resource path="res://Audio/explodeTimer.mp3" type="AudioStream" id=6]
[ext_resource path="res://Audio/hitBlood.mp3" type="AudioStream" id=7]

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 11.9341, 0, 0, Vector2( 0.264045, 0.9875 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.30992, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=10]
lifetime_randomness = 0.75
emission_shape = 2
emission_box_extents = Vector3( 15, 15, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = -720.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 7.5
linear_accel_random = 1.0
radial_accel = 0.06
scale = 0.35
scale_random = 0.3
scale_curve = SubResource( 12 )
color = Color( 1, 1, 1, 0.784314 )

[sub_resource type="CircleShape2D" id=1]
radius = 250.0

[sub_resource type="CapsuleShape2D" id=11]
radius = 21.9999
height = 44.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 19.9999
height = 44.0

[node name="Pufferfish" type="KinematicBody2D" groups=["collide"]]
light_mask = 3
collision_layer = 8200
collision_mask = 8
script = ExtResource( 1 )

[node name="Visibilty_Box" parent="." instance=ExtResource( 4 )]
scale = Vector2( 11, 11 )

[node name="Particles2D" type="Particles2D" parent="."]
light_mask = 524290
rotation = 1.57079
z_index = -4
amount = 9
lifetime = 2.5
fixed_fps = 60
visibility_rect = Rect2( -1250, -1250, 2500, 2500 )
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
pause_mode = 1
light_mask = 524290
scale = Vector2( 0.045, 0.045 )
texture = ExtResource( 3 )

[node name="Player_Detection" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_Detection"]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Hitbox_Box" type="CollisionShape2D" parent="Hitbox"]
rotation = 1.5708
z_index = 20
shape = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
z_index = 6
shape = SubResource( 2 )

[node name="Health_Bar" type="ProgressBar" parent="."]
light_mask = 0
margin_left = -36.0
margin_top = -40.0
margin_right = 35.0
margin_bottom = -26.0
theme = ExtResource( 5 )
value = 50.0
percent_visible = false

[node name="AudioStreamPlayer2D1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
area_mask = 0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
area_mask = 0

[connection signal="viewport_entered" from="Visibilty_Box" to="." method="_on_Visibilty_Box_viewport_entered"]
[connection signal="viewport_exited" from="Visibilty_Box" to="." method="_on_Visibilty_Box_viewport_exited"]
[connection signal="body_entered" from="Player_Detection" to="." method="_on_Player_Detection_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
